# oc-DECLARE

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
.github/workflows/: python310.yml  python311.yml  python312.yml  python313.yml  python38.yml  python39.yml
backend/: Cargo.toml
backend/src/: lib.rs
crates/: Cargo.toml
crates/backend-wasm/: Cargo.toml  README.md  rust-toolchain.toml
crates/backend-wasm/pkg/: backend_wasm.d.ts  package.json  (+3 more)
crates/evaluation/: Cargo.toml  README.md
crates/shared/: Cargo.toml
crates/shared/bindings/: OCDeclareArc.ts  OCDeclareArcType.ts  OCDeclareNode.ts  ViolationInfo.ts
crates/shared/src/: discovery.rs  lib.rs  reduction.rs  sync_group_discovery.rs
evaluation-results/raw-results/: BPIC2017-Direct-results.json  BPIC2017-Direct-summary.json  BPIC2017-None-results.json  BPIC2017-None-summary.json  Logistics-Direct-results.json  Logistics-Direct-summary.json  Logistics-None-results.json  Logistics-None-summary.json  O2C-Direct-results.json  O2C-Direct-summary.json  O2C-None-results.json  O2C-None-summary.json  P2P-Direct-results.json  P2P-Direct-summary.json  P2P-None-results.json  P2P-None-summary.json
oc_declare_python/: Cargo.toml  pyproject.toml
oc_declare_python/src/: lib.rs
src/: App.tsx  helper.ts  index.css
src/edges/: CustomEdge.tsx  edge-helpers.ts  index.ts  types.ts
src/lib/: automatic-layout.ts  download-blob.ts  ocel-info.ts  random-colors.ts  type-conversions.ts  worker.ts
src/nodes/: ActivityNode.tsx  index.ts  types.ts
(+27 files in other folders)
