[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
process_mining = {path = "/home/aarkue/doc/projects/rust4pm/process_mining" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
itertools = "0.14.0"
rayon = "1.10.0"
ts-rs = "10.1"
indicatif = {version = "0.17.11", features = ["rayon"]}